--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/">Лента</a>
+            <a href="{{ site.baseurl }}/about">Про Вантуз</a>
           </nav>
         </header>
       </div>
