--- a/style.scss
+++ b/style.scss
@@ -120,6 +120,10 @@ img {
   color: $gray;
 }
 
+.suggestions {
+  font-style: italic;
+}
+
 // Specify the color of the selection
 ::-moz-selection {
   color: $black;
