--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
   </div>
   
   <div class="suggestions">
-    Появились вопросы, предожения, сомнения в собственном душевном здоровье? Редакция с удовольствием ответит на любые ваши вопросы
+    Появились вопросы, предожения, сомнения в собственном душевном здоровье? Редакция с удовольствием ответит на любые ваши комментарии.
   </div>
   
   {% include disqus.html %}
