--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Лента</a>
-            <a href="{{ site.baseurl }}/about">Про Вантуз</a>
+            <a href="{{ site.baseurl }}/about">О Вантузе</a>
           </nav>
         </header>
       </div>
